[tool.poetry]
name = "fastapi-csrf"
version = "0.1.0"
description = ""
authors = ["Andy Lincoln <andrew-lincoln@pluralsight.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
fastapi-csrf-protect = "^0.2.1"
uvicorn = {version = "^0.17.4", extras = ["standard"]}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
